[tool.black]
line-length = 88
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "nats-python"
version = "0.5.0-alpha.0"
description = "Python client for NATS messaging system"
authors = [
    "Nikita Grishko <gr1n@protonmail.com>"
]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/Gr1N/nats-python"
repository = "https://github.com/Gr1N/nats-python"

packages = [
    { include = "pynats" }
]

keywords = ["nats", "nats-client", "messaging"]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"

dataclasses = { version = ">=0.6.0", python = "~3.6" }

[tool.poetry.dev-dependencies]
black = { version = ">=18.9b0", allows-prereleases = true }
flake8 = ">=3.6.0"
flake8-bugbear = ">=18.8.0"
isort = ">=4.3.4"
msgpack = ">=0.6.0"
mypy = ">=0.650"
pytest = ">=4.1.0"
pytest-cov = ">=2.6.0"
tox = ">=3.6.0"
