[tool.black]
line-length = 88
target-version = ["py36", "py37", "py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
combine_as_imports = true
default_section = "LOCALFOLDER"
force_grid_wrap = false
include_trailing_comma = true
known_first_party = "nats"
known_standard_library = "dataclasses"
known_third_party = "msgpack,pkg_resources,pytest"
line_length = 88
multi_line_output = 3
not_skip = "__init__.py"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip = ".eggs,.tox,venv,.venv"

[tool.poetry]
name = "nats-python"
version = "0.6.0"
description = "Python client for NATS messaging system"
authors = [
    "Nikita Grishko <gr1n@protonmail.com>"
]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/Gr1N/nats-python"
repository = "https://github.com/Gr1N/nats-python"

packages = [
    { include = "pynats" }
]

keywords = ["nats", "nats-client", "messaging"]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"

dataclasses = { version = ">=0.6.0", python = "~3.6" }

[tool.poetry.dev-dependencies]
black = { version = ">=18.9b0", allow-prereleases = true }
codecov = ">=2.0.15"
flake8 = ">=3.6.0"
flake8-bugbear = ">=18.8.0"
isort = { version = ">=4.3.5", extras = ["pyproject"] }
msgpack = ">=0.6.0"
mypy = ">=0.650"
pytest = ">=4.1.0"
pytest-cov = ">=2.6.1"
